# DataStructureAndAlgorithm

./: .gitignore  README.md
chap4_tree/: CMakeLists.txt  build.sh
chap4_tree/.metadata/: version.ini
chap4_tree/.metadata/.plugins/org.eclipse.cdt.core/: Tree.1472079667191.pdom  Treee.language.settings.xml
chap4_tree/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
chap4_tree/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
chap4_tree/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
chap4_tree/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
chap4_tree/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
chap4_tree/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
chap4_tree/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
chap4_tree/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
chap4_tree/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_2
chap4_tree/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
chap4_tree/Tree/: tree.h
chap4_tree/code/: main.cpp  tree.cpp  tree.h
chap4_tree/testcase/include/: TestTreeFixture.h
chap4_tree/testcase/source/: TestTreeFixture.cpp  main.cpp  testcase.cpp
(+6 files in other folders)
